--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,9 @@
   --blue: #67aadc;
   --blue-hover: #518ab6;
 }
+
+.App {
+  background-color: var(--background-color);
+  margin: 0;
+  padding: 0;
+}
