--- a/src/App.css
+++ b/src/App.css
@@ -9,4 +9,17 @@
   background-color: var(--background-color);
   margin: 0;
   padding: 0;
+  min-height: 100vh;
+}
+.link {
+  font-size: 18px;
+  font-weight: 500;
+}
+.brand {
+  font-size: 28px;
+  font-weight: 700;
+}
+.link,
+.brand {
+  color: black;
 }
