--- a/src/components/CardRecent/styles.module.css
+++ b/src/components/CardRecent/styles.module.css
@@ -1,28 +1,29 @@
 .card {
     display: flex;
-    /* justify-content: center; */
-    /* align-items: center; */
     flex-direction: column;
-    width: 20%;
-    background-color: white;
+    /* width: 20%;
+    background-color: white; */
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-    border-radius: 15px;
-    margin-top: 30px;
-    margin-bottom: 100px;
+    /* border-radius: 15px; */
+    /* margin-top: 30px; */
+    /* margin-bottom: 100px; */
     float: left;
-    margin: 30px;
-    margin-bottom: 50px;
-    /* flex-wrap: wrap; */
-    /* justify-content: space-between; */
+    margin: 30px 2em 50px 2em;
+    /* margin-bottom: 50px; */
     padding: 12px;
-    bottom: 50px;
+    /* bottom: 50px; */
     min-height: 100%;
-    /* word-wrap: break-word; */
+    /* word-wrap: break-word;
     overflow: hidden;
-    /* overflow-wrap: break-word; */
-    /* word-break: break-all; */
-    /* hyphens: auto; */
-    text-overflow: ellipsis;
+    text-overflow: ellipsis; */
+    width: 20%;
+    /* display: flex; */
+    /* flex-direction: row; */
+    /* width: 50%; */
+    flex-wrap: wrap;
+    background-color: white;
+    border-radius: 15px;
+    float: left;
   }
   
   /* .luas{
@@ -35,11 +36,11 @@
   
   .card img {
     width: 100%;
-    border-radius: 15px 15px 0 0;
+    border-radius: 15px;
   }
   
   .card .imgReversed {
-    border-radius: 0 0 15px 15px !important;
+    border-radius: 15px !important;
   }
   
   .card h2 {
@@ -47,7 +48,7 @@
     margin-top: 1rem;
     color: gray;
     text-transform: uppercase;
-    font-size: 10px;
+    font-size: 14px;
     font-family: 'Roboto';
     font-weight: 400;
   }
@@ -55,7 +56,7 @@
   .card h3 {
     font-family: 'Roboto';
     font-weight: bold;
-    font-size: 15px;
+    font-size: 20px;
     margin: 0;
     /* word-wrap: break-word;
       word-break: break-all;
@@ -66,6 +67,8 @@
     font-family: 'Roboto';
     margin: 0;
     color: gray;
+    font-size: 14px;
+
   }
   
   .card p {
@@ -84,7 +87,7 @@
       font-size: 16px;
     }
     .card h2 {
-      font-size: 14px;
+      font-size: 20px;
     }
     .card p {
       font-size: 14px;
