--- a/src/components/CardPopular/style.module.css
+++ b/src/components/CardPopular/style.module.css
@@ -1,15 +1,17 @@
 .card {
   display: flex;
-  /* justify-content: center; */
-  /* align-items: center; */
   flex-direction: column;
   width: 30%;
+  height: 550px;
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
   border-radius: 15px;
+  margin-bottom: 5rem;
 }
+
 .card img {
   width: 100%;
+  height: 300px;
   border-radius: 15px 15px 0 0;
 }
 
@@ -31,7 +33,14 @@
   font-family: 'Roboto';
   font-weight: 500;
   font-size: 20px;
+  height: 60px;
+  overflow: scroll;
   margin: 0;
+  cursor: pointer;
+}
+
+.card h1:hover {
+  text-decoration: underline;
 }
 
 .card p {
@@ -39,6 +48,8 @@
   color: var(--gray);
   font-weight: 400;
   font-size: 16px;
+  height: 80px;
+  overflow: scroll;
   line-height: 19px;
 }
 
