--- a/src/components/CardRecent/styles.module.css
+++ b/src/components/CardRecent/styles.module.css
@@ -6,14 +6,14 @@
   padding: 12px;
   min-height: 100%;
   width: 350px;
-  flex-wrap: wrap;
   background-color: white;
   border-radius: 15px;
-  float: left;
+  height: 500px;
 }
 
 .card img {
   width: 100%;
+  height: 250px;
   border-radius: 15px;
 }
 
@@ -44,6 +44,10 @@
   font-size: 14px;
 }
 
+.card h3:hover {
+  text-decoration: underline;
+}
+
 .card p {
   font-family: 'Roboto';
   color: var(--gray);
@@ -55,6 +59,12 @@
 @media screen and (max-width: 768px) {
   .card {
     width: 90%;
+    height: 100%;
+  }
+
+  .card img {
+    width: 100%;
+    height: 250px;
   }
   .card h1 {
     font-size: 16px;
