--- a/src/components/CardRecent/styles.module.css
+++ b/src/components/CardRecent/styles.module.css
@@ -4,13 +4,16 @@
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
   margin: 30px 2em 50px 2em;
   padding: 12px;
-  min-height: 100%;
+  min-height: 450px;
   width: 350px;
   background-color: white;
   border-radius: 15px;
-  height: 500px;
+  position: relative;
 }
-
+.card:hover {
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+  margin-top: 20px;
+}
 .card img {
   width: 100%;
   height: 250px;
@@ -55,12 +58,19 @@
   font-size: 16px;
   line-height: 19px;
 }
-.button {
-  position: absolute;
-  right: 2px;
-}
+
 .information_container {
-  position: relative;
+  display: flex;
+  gap: 10px;
+  position: absolute;
+  width: 94%;
+  justify-content: space-between;
+  bottom: 30px;
+  right: 10px;
+  align-items: center;
+}
+.information_container > h6 {
+  flex-basis: 80%;
 }
 @media screen and (max-width: 768px) {
   .card {
