--- a/src/components/CardRecent/styles.module.css
+++ b/src/components/CardRecent/styles.module.css
@@ -11,7 +11,7 @@
   position: relative;
 }
 .card:hover {
-  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+  box-shadow: var(--hover-shadow);
   margin-top: 20px;
 }
 .card img {
