--- a/src/components/CardPopular/style.module.css
+++ b/src/components/CardPopular/style.module.css
@@ -11,7 +11,8 @@
 
 .card:hover {
   box-shadow: var(--hover-shadow);
-  margin-top: 20px;
+  margin-top: 4px;
+  transition: 200ms;
 }
 .card img {
   width: 100%;
