--- a/src/components/CardRecent/styles.module.css
+++ b/src/components/CardRecent/styles.module.css
@@ -53,7 +53,7 @@
 
 .card p {
   font-family: 'Roboto';
-  color: var(--gray);
+  color: var(--gray-1);
   font-weight: 400;
   font-size: 16px;
   line-height: 19px;
