--- a/src/components/CardPopular/style.module.css
+++ b/src/components/CardPopular/style.module.css
@@ -27,7 +27,7 @@
 .card h2 {
   margin: 0;
   margin-top: 1rem;
-  color: var(--blue);
+  color: var(--blue-1);
   text-transform: uppercase;
   font-size: 16px;
   font-family: 'Roboto';
@@ -50,7 +50,7 @@
 
 .card p {
   font-family: 'Roboto';
-  color: var(--gray);
+  color: var(--gray-1);
   font-weight: 400;
   font-size: 16px;
   height: 80px;
